--- a/about_me/index.html
+++ b/about_me/index.html
@@ -14,7 +14,7 @@
       <h2 style="text-align:center; color: #007F8D; font-family:'Segoe UI'">Remi</h2>
       <p style="text-align:center; font-family:'Segoe UI'; border-image: initial; border: 10px solid #81BC4A">Hello! I'm 26 years old and I'm from Mexico! <br> 
         I have a Bachelor's degree in Process Technology engenering. My degree is from Mexico and I want to have a second from US 
-      <br>When I was in High School, I had a similar class. We used notepad to create HTML code. To be honest I don't remmeber how to program. It has been like 9 or more years.
+      <br>When I was in High Scool, I had a similar class. We used notepad to create HTML code. To be honest I don't remmeber how to program. It has been like 9 or more years.
       <br>But I still remmeber the special things in HTML
       <br>I work in Robert Bosch as a Consultant SD SAP. I'm still single. I love do excercise, hiking and climbing. </p>
   </body>
