--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-    <h1>Remibc Site Plan</h1>
+    <h1>White Water Rafting Site Plan</h1>
     <h2>Remi Barron</h2>
     <h2>WDD 130-01</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
