--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -11,7 +11,7 @@
   <header>
     <h1>White Water Rafting Site Plan</h1>
     <h2>Remi Barron</h2>
-    <h2>WDD 130-01</h2>
+    <h2>WDD 130-15</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -23,6 +23,16 @@
     White Water Rafting Website contains the best security for any payment and also the easy way to find all the information that the customer needs.
     Customers can planify and pay this extreme sport.</p>
     <!-- change this -->
+
+
+
+
+
+
+
+
+
+
 
     <h3>Audience</h3>
     <p>This Website is a friendly and family site. The recomendation for this network is for those ones that are looking for supreme experience.
@@ -37,8 +47,7 @@
     <img src="images/logo.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
-
-    <!-- ------------------------Steps 6-9------------------------------ -->
+  <!-- ------------------------Steps 6-9------------------------------ -->
 
     <h3>Color Palette</h3>
     <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in Canvas then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
@@ -57,10 +66,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#3F91C7]</td>
-        <td class="secondary">[#56BD90]</td>
-        <td class="accent1">[#A4AEAE]</td>
-        <td class="accent2">[#F3FAF4]</td>
+        <td class="primary">#3F91C7</td>
+        <td class="secondary">#56BD90</td>
+        <td class="accent1">#A4AEAE</td>
+        <td class="accent2">#F3FAF4</td>
       </tr>
     </table>
 
