--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -11,7 +11,7 @@
   <header>
     <h1>White Water Rafting Site Plan</h1>
     <h2>Remi Barron</h2>
-    <h2>WDD 130-1</h2>
+    <h2>WDD 130-15</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -66,10 +66,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">3F91C7</td>
-        <td class="secondary">56BD90</td>
-        <td class="accent1">A4AEAE</td>
-        <td class="accent2">F3FAF4</td>
+        <td class="primary">#3F91C7</td>
+        <td class="secondary">#56BD90</td>
+        <td class="accent1">#A4AEAE</td>
+        <td class="accent2">#F3FAF4</td>
       </tr>
     </table>
 
