--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations | White Water Rafting | Home</title>
+    <title>Whitewater Rafting | White Water Rafting | Home</title>
 </head>
 <body>
     <header>
@@ -13,26 +13,26 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
+            <a href="#">Next Page</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="https://byui-wdd.github.io/wdd130/rafting_images/hero.png" alt="People enjoying rafting">
+            <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
         </div>
         <section  id="hero-msg">
-            <h1 class="home-title">Have An Adventure</h1>
-            <h4>Make Memories with Dry Oar</h4>
+            <h1 class="home-title">Extreme Adventure is waiting for you</h1>
+            <h4>Make Fantastic Experiences</h4>
             <div class="button-box">
-                <a class="book" href="contactus.html">Book Now</a>
+                <a class="book" href="contactus.html">Reserve Now</a>
             </div>
         </section>
     </div>
     <main class="home-grid">
         <section class="river-card">
-            <img src="https://byui-wdd.github.io/wdd130/rafting_images/rivers.jpg" alt="river in forest" class="card-img">
+            <img src="images/river.jpg" alt="river in forest" class="card-img">
             <img src="https://byui-wdd.github.io/wdd130/rafting_images/river_icon.png" alt="river icon" class="icon">
             <h2>Rivers</h2>
         </section>
@@ -42,30 +42,33 @@
             <h2>Camping</h2>
         </section>
         <section class="rapids-card">
-            <img src="https://byui-wdd.github.io/wdd130/rafting_images/rapids.jpg" alt="rafting boat" class="card-img">
+            <img src="images/rapids.jpg" alt="rafting boat" class="card-img">
             <img src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png" alt="oars icon" class="icon">
             <h2>Repids</h2>
         </section>
-        <img src="https://byui-wdd.github.io/wdd130/rafting_images/mountains.jpg" alt="Misty mountains" class="mountains">
+        <img src="images/frinds.jpg" alt="Misty mountains" class="mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
-            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+            <p>Enjoy the breathtaking scenery. 
+                From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. 
+                It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.
+                Have fun with Friends, Family or Alone. </p>
             <a class='join' href="rivers.html">Join Us</a>
         </section>
     </main>
     <footer>
-        <p>Dry Oar &copy; 2022 - Remi Barron</p>
+        <p>Whitewater Rafting &copy; 2022 - Remi Barron</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com">
-                <img src="https://byui-wdd.github.io/wdd130/rafting_images/facebook.png" alt="fb icon">
+                <img src="images/fb.jpg" alt="fb icon">
             </a>
             <a href="https://twitter.com">
-                <img src="https://byui-wdd.github.io/wdd130/rafting_images/twitter.png" alt="twitter icon">
+                <img src="images/tw.jpg" alt="twitter icon">
             </a>
             <a href="https://instagram.com">
-                <img src="https://byui-wdd.github.io/wdd130/rafting_images/instagram.png" alt="instagram icon">
+                <img src="images/ins.jpg" alt="instagram icon">
             </a>
         </div>
     </footer>
