--- a/wwr/index.html
+++ b/wwr/index.html
@@ -32,7 +32,7 @@
     </div>
     <main class="home-grid">
         <section class="river-card">
-            <img src="images/river.jpg" alt="river in forest" class="card-img">
+            <img src="images/river.jpg" alt="river in mountains" class="card-img">
             <img src="https://byui-wdd.github.io/wdd130/rafting_images/river_icon.png" alt="river icon" class="icon">
             <h2>Rivers</h2>
         </section>
