--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting | White Water Rafting | Home</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div id="content">
     <header>
         <a id="logo_link"  href="index.html">
-            <img src ="images/logo.png" alt="logo">
+            <img src ="images/logo.png" alt="logo" class="logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -20,7 +22,7 @@
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
+            <img id="hero-img" src="images/hero.jpg" alt="People enjoying rafting">
         </div>
         <section  id="hero-msg">
             <h1 class="home-title">Extreme Adventure is waiting for you</h1>
@@ -46,6 +48,7 @@
             <img src="https://byui-wdd.github.io/wdd130/rafting_images/oars.png" alt="oars icon" class="icon">
             <h2>Repids</h2>
         </section>
+        <div id="background"></div> 
         <img src="images/frinds.jpg" alt="Misty mountains" class="mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
@@ -61,16 +64,17 @@
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com">
+            <a href="https://facebook.com" target="_blank">
                 <img src="images/fb.jpg" alt="fb icon">
             </a>
-            <a href="https://twitter.com">
+            <a href="https://twitter.com" target="_blank">
                 <img src="images/tw.jpg" alt="twitter icon">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target="_blank">
                 <img src="images/ins.jpg" alt="instagram icon">
             </a>
         </div>
     </footer>
+    </div>
 </body>
 </html>
