--- a/artesanias/site-plan.html
+++ b/artesanias/site-plan.html
@@ -108,10 +108,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Lamparas Artesanales <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Contact Us  <!-- change this -->
         </div>
 
         <div class="top">
@@ -133,29 +133,29 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Artesania web site is a place where entrepreneurs are free to post their products and make publish their contact with buyers to have more sales. This site is also dedicated to the buyers or people who are looking for something special and unique or just want to support the entrepreneurship. The Home page will start with an introduction about Artesania a simple explanation about this platform. I want to explain the purpose for sellers and buyers. The next section of the page is to show a list of some examples of entrepreneur’s brands logos and products. The idea is to give two purposes. For the sellers that any kind of product can be published and the buyers that they can find any kind of product customized. The page will have attractive colors. The images will have some special design. My intension is to create the home page very colourful. I think when we talk about sells it has to be attractive. At the end of the page, I want to include my logo and special phrase to motivate the audience. Of course, I will include legal information and two buttons one for site plan another for contact information (Page 3).
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/marcos.jpg" alt="image for homepage">
+        <img src="images/artesania.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Lamparas Artesanales</h3>
       <p>
-        [Written copy for the Page 2 here]
+        The intention is that each brand will have a page. The Page 2 will be created as example of how they will be shown to the consumers. In this case, the page´s name will be “Lamparas Artesanales” My plan is the in the navigation section put the name of the business. The first part will contain in big size the logo of the brand and if they have a special slogan, it can be included in this section. The next part is to include some information about the brand. What they are, what they do, etc. a small but effective description. The next part is to show some examples of their products. I want to include a special sentence like “You can customize your bracelet” something that can be very attractive to the purchaser. I can also include if they do something special like mass production o special events. At the end, the most important thing is the contact information, Email, Phone number, Facebook, Instagram, Twitter, any social media, etc. The schema is to share any information the entrepreneurs want to show on the website. Also, in this section I want to share something important like for example time of shipments, international shipment. Etc 
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/lamparas.JPG" alt="image for page">
+        <img src="images/lamparas2.JPG" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Contact Us</h3>
       <p>
-        [Written copy for the Page 3 here]
+        The third page will be dedicated to put my contact information, So, the page 3 name is Contact Us. If someone would like to share their creation or want to have more information this section is perfect. I will put my email, phone, social medias, etc. I want to put first my logo in a big size, and I would like to put some another example of brands like in the home page. I would like also to include some general questions and answers. Such as the cost to create a page (There is no cost), the time to create one website, how they can update their information, etc. At the end of the website, I will put the terms and two buttons, same as the home page. This section is very important for the sellers, it need to be very formal and at the same attractive. I want to make businesspeople that in Aretesania we take this very seriously. During the pandemic, many people lost their job and they made the decision to start a business from their homes. They just want to have an economic stability. But, any kind of business is welcome in this platform
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/questions.JPG" alt="image for page3">
+        <img src="images/get.jpg" alt="image for page3">
 
       </ul>
       <hr>
