--- a/artesanias/site-plan.html
+++ b/artesanias/site-plan.html
@@ -95,9 +95,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Lamparas Artesanales</a>
-        <a href="#">Contact Us</a>
+        <a href="#" class="home">Home</a>
+        <a href="#" class="la">Lamparas Artesanales</a>
+        <a href="#" class="cu">Contact Us</a>
       </nav>
       <hr>
       <h2>
@@ -166,22 +166,16 @@
         Create three wireframes for your site. One for each page and list them here</p>
 
       <h3>Home</h3>
-      <p>         
-        [Any additional details about home that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="home page wireframe">
+   
+      <img src="images/home.JPG" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
-      <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 2 wireframe">
+      <h3>Lamparas Artesanales</h3>
+      
+      <img src="images/la.JPG" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
-      <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 3 wireframe">
+      <h3>Contact US</h3>
+  
+      <img src="images/contact.JPG" alt="page 3 wireframe">
     </main>
   </body>
 
