--- a/artesanias/lamparas.html
+++ b/artesanias/lamparas.html
@@ -94,7 +94,7 @@
     <footer>
         <p>Artesania &copy; 2022 - Remi Barron</p>
         <p><a href="site-plan.html">Site Plan</a></p>
-        <p><a href="">Get in Touch</a></p>
+        <p><a href="getintouch.html">Get in Touch</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
                 <img src="images/fb.png" alt="fb icon">
