--- a/artesanias/site-plan.html
+++ b/artesanias/site-plan.html
@@ -36,7 +36,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/logo.png" alt="Logo image">
+      <img src="images/flogo.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -97,7 +97,7 @@
       <nav>
         <a href="#" class="home">Home</a>
         <a href="#" class="la">Lamparas Artesanales</a>
-        <a href="#" class="cu">Contact Us</a>
+        <a href="#" class="cu">Get in Touch</a>
       </nav>
       <hr>
       <h2>
@@ -111,7 +111,7 @@
           Lamparas Artesanales <!-- change this -->
         </div>
         <div class="sm-page3">
-          Contact Us  <!-- change this -->
+          Get in Touch  <!-- change this -->
         </div>
 
         <div class="top">
@@ -146,12 +146,12 @@
       </p>
       <p>Images for the Page 2</p>
         <img src="images/lamparas.JPG" alt="image for page">
-        <img src="images/lamparas2.JPG" alt="image for page">
+        <img src="images/event.png" alt="image for page">
 
       </ul>
-      <h3>Contact Us</h3>
+      <h3>Get in Touch</h3>
       <p>
-        The third page will be dedicated to put my contact information, So, the page 3 name is Contact Us. If someone would like to share their creation or want to have more information this section is perfect. I will put my email, phone, social medias, etc. I want to put first my logo in a big size, and I would like to put some another example of brands like in the home page. I would like also to include some general questions and answers. Such as the cost to create a page (There is no cost), the time to create one website, how they can update their information, etc. At the end of the website, I will put the terms and two buttons, same as the home page. This section is very important for the sellers, it need to be very formal and at the same attractive. I want to make businesspeople that in Aretesania we take this very seriously. During the pandemic, many people lost their job and they made the decision to start a business from their homes. They just want to have an economic stability. But, any kind of business is welcome in this platform
+        The third page will be dedicated to put my contact information, So, the page 3 name is Get in Touch. If someone would like to share their creation or want to have more information this section is perfect. I will put my email, phone, social medias, etc. I want to put first my logo in a big size, and I would like to put some another example of brands like in the home page. I would like also to include some general questions and answers. Such as the cost to create a page (There is no cost), the time to create one website, how they can update their information, etc. At the end of the website, I will put the terms and two buttons, same as the home page. This section is very important for the sellers, it need to be very formal and at the same attractive. I want to make businesspeople that in Aretesania we take this very seriously. During the pandemic, many people lost their job and they made the decision to start a business from their homes. They just want to have an economic stability. But, any kind of business is welcome in this platform
       </p>
       <p>Images for the Page 3</p>
         <img src="images/questions.JPG" alt="image for page3">
@@ -173,7 +173,7 @@
       
       <img src="images/la.JPG" alt="page 2 wireframe">
 
-      <h3>Contact US</h3>
+      <h3>Get in Touch</h3>
   
       <img src="images/contact.JPG" alt="page 3 wireframe">
     </main>
