--- a/artesanias/getintouch.html
+++ b/artesanias/getintouch.html
@@ -17,9 +17,10 @@
             <img src ="images/logo1.png" alt="logo1" class="logo1">
         </a>
         <nav>
-            <a href="index.html" class="home">Home</a>
-            <a href="lamparas.html" class="la">Lamparas Artesanales</a>
-            <a href="site-plan.html" class="sp">Site Plan</a>
+          <a href="index.html" class="home">Home</a>
+          <a href="lamparas.html" class="la">Lamparas Artesanales</a>
+          <a href="site-plan.html" class="sp">Site Plan</a>
+          <a href="getintouch.html" class="gt">Get in Touch</a>
         </nav>
     </header>
     <div>
