--- a/artesanias/lamparas.html
+++ b/artesanias/lamparas.html
@@ -18,6 +18,7 @@
         </a>
         <nav>
             <a href="index.html" class="home">Home</a>
+            <a href="lamparas.html" class="la">Lamparas Artesanales</a>
             <a href="site-plan.html" class="sp">Site Plan</a>
             <a href="getintouch.html" class="gt">Get in Touch</a>
         </nav>
